# skypro.interview.django.products

./: .flake8  .gitignore  Dockerfile.linux  Dockerfile.win  LICENCE  Makefile  README.md  docker-compose.yml  pyproject.toml  report.xml
.github/workflows/: makefile.yml
app/: manage.py
app/api/: urls.py  wsgi.py
app/api/settings/: __init__.py  base.py  development.py  production.py
app/api/templates/: base.html
app/api/templates/account/: base.html  login.html  password_change.html  password_reset.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
app/api/templates/admin/: base_site.html
app/api/templates/includes/: bs5_form.html
app/app/: settings.py  urls.py
app/app/settings/: base.py  development.py  production.py
app/common/: models.py  populate.py  views.py
app/common/populate/: __init__.py  bakery.py  script_async.py  script_threads.py  settings.py  utils.py
app/common/utils/: __init__.py  bakery.py  utils.py
app/customers/: admin.py  models.py
app/customers/migrations/: 0001_initial.py  0002_cartitem_customers_c_product_5e8d18_idx.py  0003_cart_customers_c_is_purc_9539b7_idx.py  0004_remove_cartitem_customers_c_product_5e8d18_idx_and_more.py  0005_cart_customers_c_purchas_2608d4_idx.py  0006_remove_cartitem_customers_c_product_b35338_idx_and_more.py  0007_rename_customers_c_purchas_a3854a_idx_cart_combined_idx_and_more.py  0008_remove_cart_cart_combined_idx_and_more.py  0009_alter_cart_customer.py
app/products/: admin.py  models.py  urls.py  views.py
app/products/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0003_category_created_at_category_updated_at_and_more.py
app/products/templates/: base.html  products.html
app/static/images/icon/: site.webmanifest
app/users/: urls.py  views.py
app/users/templates/: profile.html
deploy/nginx/: Dockerfile  nginx.conf
deploy/nginx/errors/: 404.html  50x.html
deploy/web/: Dockerfile.linux  Dockerfile.win
nginx/: Dockerfile  nginx.conf
scripts/: entrypoint.sh
tests/integrations/: test_main.py
tests/units/: conftest.py  types.py
tests/units/test_app/: test_main.py
tests/units/test_app/test_products/: test_view.py
