[tool.poetry]
name = "skypro.interview.django.products"
version = "0.0.1"
description = "Interview project for Skypro"
authors = ["Anthony Bagrianov <rudiemeant@gmail.com>"]
maintainers = ["Anthony Bagrianov <rudiemeant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
uvloop = {version = "0.17.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
django = "4.2.5"
psycopg2-binary = "2.9.8"
uvicorn = "0.23.2"
gunicorn = "21.2.0"
redis = "5.0.1"
django-money = "3.3.0"
python-dotenv = "1.0.0"
# NB (a.bagryanov): we use django-stubs imports a lot
# so we need to install it as a production dependency
django-stubs = {version = "4.2.3", extras = ["compatible-mypy"]}
loguru = "0.7.2"
psycopg = {extras = ["binary"], version = "3.1.12"}
# TODO (a.bagryanov): move django-debug-toolbar to dev dependencies
django-debug-toolbar = "4.2.0"
whitenoise = "6.5.0"
django-allauth = "0.57.0"
django-widget-tweaks = "1.5.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.1"
bandit = {extras = ["toml"], version = "1.7.5"}
black = "23.1.0"
coverage = "7.2.0"
flake8 = "6.0.0"
flake8-bugbear = "23.2.13"
flake8-print = "5.0.0"
flake8-pytest-style = "1.7.2"
flake8-simplify = "0.19.3"
flake8-unused-arguments = "0.0.13"
isort = "5.12.0"
pytest = "7.2.1"
pytest-asyncio = "0.20.3"
mypy = "1.4.1"
flake8-comments = "^0.1.2"

[tool.poetry.group.populate]
optional = true

[tool.poetry.group.populate.dependencies]
model-bakery = "1.15.0"
faker = "19.6.2"
faker-commerce = "1.0.3"

[tool.black]
line-length = 100

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
aggressive = 3
select = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 100
wrap_length = 100
multi_line_output = 3
combine_as_imports = true
force_alphabetical_sort_within_sections = true
overwrite_in_place = true
skip_glob = [
    "*/migrations/*"
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
]
python_version = "3.11"
follow_imports = "silent"
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
namespace_packages = true
exclude = [
    ".*/migrations/*"
]

[tool.django-stubs]
django_settings_module = "app.api.settings.development"

[[tool.mypy.overrides]]
module = [
   "djmoney.*",
   "faker_commerce",
   "whitenoise.*",  # https://github.com/evansd/whitenoise/pull/410
]
ignore_missing_imports = true

[tool.bandit]
skips = [
    "B311" # Standard pseudo-random generators are not suitable for security/cryptographic purposes
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    # Skip any pass lines such as may be used for @abstractmethod.
    "pass",

    # Don't complain if tests don't hit defensive assertion code.
    "raise NotImplementedError",
]